# finite-diff-method

./: .gitignore  CMakeLists.txt  README.md
doc/: edumma_2022_hw_rk6_64b_dunaitsevai_var67.tex
doc/static/: listing_sample.c
project/: main.cpp  solution.cpp
project/include/: CalculationUtils.hpp  Matrix.hpp  Model.hpp  SolutionStorage.hpp
project/src/: Model.cpp  SolutionStorage.cpp
